--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Hawke_ya
 email: hughew@foxmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  The Learner of the Front End Programming, dedicator of the moview, begginner of Photography, lover of beautiful life.
+  The Learner of Front End Programming, Dedicator of movies, Begginner of Photography, Lover of life.<br />
   What was lived shall be alive forever
 
 baseurl: "" # the subpath of your site, e.g. /blog
