--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Hawke_ya
+title: 一度°
 email: hughew@foxmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  The Learner of Front End Programming, Dedicator of movies, Begginner of Photography, Lover of life.<br />
-  What was lived shall be alive forever
+  Once°<br />
+  The Learner of Front End Programming, Dedicator of movies, Begginner of Photography, Lover of beautiful life.
+  <br />"What was lived shall be alive forever"
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "http://127.0.0.1:4000" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: none
 github_username:  HawkeW
 
