--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ email: hughew@foxmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Once°<br />
   The Learner of Front End Programming, Dedicator of movies, Begginner of Photography, Lover of beautiful life.
-  <br />"What was lived shall be alive forever"
+  <br />"What once lived shall be alive forever"
 
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://127.0.0.1:4000" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://hawkew.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: none
 github_username:  HawkeW
 
