--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 #The Learner of Front End Programming, Dedicator of movies, Begginner of Photography, Lover of beautiful life.
 
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://hawkew.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: none
 github_username:  HawkeW
